monticore-generator/src/test/resources/cocos/invalid/A0112/A0112.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0112;

grammar A0112 {

  Foo = "foo";

  Bar = "bar";

  Bar = "foo";

}
